--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,18 @@
     <string name="signUp">Registratse</string>
     <string name="signIn">Login</string>
     <string name="carro">Carro</string>
-    <string name="pedido">Pedido</string>
+    <string name="pedido">Pedidos</string>
+    <string name="status0">Pedida</string>
+    <string name="status1">En reparto</string>
+    <string name="status2">Recibido</string>
     <string name="salir">Salir</string>
     <string name="description">Descripción</string>
     <string name="placeorder">Realizar pedido</string>
+    <string name="dialogTitle">Un paso más!</string>
+    <string name="dialogText">Introduzca su dirección: </string>
+    <string name="confirmOrder">SI</string>
+    <string name="denegateOrder">NO</string>
+    <string name="orderSubmitted">Pedido realizado!</string>
     <string name="title_activity_home">Home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
