Control Internet Conection and Delete from cart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="status1">En reparto</string>
     <string name="status2">Recibido</string>
     <string name="searchbar">Busque su comida</string>
+    <string name="connection">Revise su conexión</string>
+    <string name="selectAction">Seleccione acción</string>
+    <string name="deleteItemCart">Borrar</string>
+    <string name="emptyCart">Su cesta esta vacía!</string>
     <string name="salir">Salir</string>
     <string name="description">Descripción</string>
     <string name="placeorder">Realizar pedido</string>
