--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="salir">Salir</string>
     <string name="address">Dirección</string>
     <string name="comment">Comentario</string>
+    <string name="canceledPayment">Pago cancelado</string>
     <string name="description">Descripción</string>
     <string name="placeorder">Realizar pedido</string>
     <string name="dialogTitle">Un paso más!</string>
